--- a/lib.css
+++ b/lib.css
@@ -11,6 +11,8 @@ li {
 .header{
     display: grid;
     justify-content: center;
+    background-color: skyblue;
+    width: 900px;
 }
 
 .books{
@@ -19,7 +21,7 @@ li {
     grid-auto-rows: 250px;
     gap: 10px;
     padding: 10px;
-    
+    background-color: burlywood;
 }
 
 
@@ -28,7 +30,7 @@ li {
     padding: 10px;
     border-radius: 8px;
     gap: 6px;
-
+    background-color: blueviolet;
 
 }
 
@@ -54,6 +56,9 @@ li {
 
 button {
     border-radius: 6px;
+    background-color: brown;
+    border-color: brown;
+    color: whitesmoke;
 }
 
 .new-book-form-popup .buttons button {
