--- a/lib.css
+++ b/lib.css
@@ -32,7 +32,7 @@ li {
     border-radius: 8px;
     gap: 6px;
     background-color: blueviolet;
-
+    color: whitesmoke;
 }
 
 .new-book-form-popup {
